<resources>
    <string name="app_name">WeCampus</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="hello_world">Hello world!</string>
    <string name="share">分享</string>
    <string name="authenticate_error">Invalid authTokenType</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>
    <string name="menu_activity">校园活动</string>
    <string name="menu_people">好友列表</string>
    <string name="menu_square">广场</string>
    <string name="menu_settings">设置</string>
    <string name="menu_no_login">未登录</string>
    <string name="access_without_login">随便看看</string>
    <string name="login_sign">注册/登录</string>
    <string name="input_email">邮        箱</string>
    <string name="input_pwd">密    码</string>
    <string name="input_tips">请输入&#8230;</string>
    <string name="btn_register">注册</string>
    <string name="btn_login">登录</string>
    <string name="forget_pwd">忘记密码?</string>
    <string name="all_kinds_of_activity">所有活动分类</string>
    <string name="section_entertainment">文娱活动</string>
    <string name="section_lecture">学术讲座</string>
    <string name="section_contest">校园赛事</string>
    <string name="section_recruiting">企业招聘</string>
    <string name="rege_actionbar_title">注册</string>
    <string name="rege_title">欢迎加入WeCampus!</string>
    <string name="rege_school">学    校</string>
    <string name="rege_email">邮    箱</string>
    <string name="rege_pwd">密    码</string>
    <string name="rege_nickname">昵    称</string>
    <string name="rege_sex">性    别</string>
    <string name="rege_submit">提交</string>
    <string name="rege_choose_school">点击选择</string>
    <string name="rege_nickname_tips">昵称最多八个字哟</string>
    <string name="rege_tips_one">点击提交，代表您已接受并同意</string>
    <string name="rege_tips_two"><u>WeCampus用户使用协议</u></string>
    <string name="user_assignment"><u>用户使用协议</u></string>
    <string name="rege_finish">完成</string>
    <string name="rege_description">简单描述下自己</string>
    <string name="rege_skip">跳过>></string>
    <string name="rege_step_two_title">注册成功! 你可以先完善一些个人资料</string>
    <string name="rege_step_two_title_two">这些信息会对你的好友开放</string>
    <string name="rege_step_two_true_name">真实姓名</string>
    <string name="rege_step_two_birthday">生   日</string>
    <string name="rege_step_two_description">个性签名</string>
    <string name="detail_label">活动详情</string>
    <string name="detail_btn_attent">已参加</string>
    <string name="detail_menu_share">分享</string>
    <string name="detail_menu_like">点赞</string>
    <string name="detail_org">发布方</string>
    <string name="detail_attend">参加的人(%d)</string>
    <string name="detail_content_tips">活动简介</string>
    <string name="want_to_attend">想参加</string>
    <string name="detail_like">喜欢(%d)</string>
    <string name="detail_no_participants">暂时还没有参加的人哦~</string>
    <string name="attend_success">已参加</string>
    <string name="quit_success">已退出活动</string>
    <string name="please_login">请先登录</string>
    <string name="imageDescription">ImageView</string>
    <string name="terms_of_use">用户协议</string>
    <string name="activity_join">参加的活动</string>
    <string name="activity_like">喜欢的活动</string>
    <string name="org_like">喜欢的公共组织</string>
    <string name="search_hint">搜索活动、用户、公共组织</string>
    <string name="avatar">头像</string>
    <string name="nickname">昵称</string>
    <string name="gender">性别</string>
    <string name="school">学校</string>
    <string name="words">个性签名</string>
    <string name="real_name">真实姓名</string>
    <string name="telephone">联系电话</string>
    <string name="email">常用邮箱</string>
    <string name="relationship">恋爱状态</string>
    <string name="birthday">生日</string>
    <string name="role">角色</string>
    <string name="my_profile_tip">互相关注才可以查看对方的详细信息噢</string>
    <string name="nickname_hint">昵称最多8个字哟</string>
    <string name="gender_hint">点击选择</string>
    <string name="words_hint">简单描述下自己</string>
    <string name="real_name_hint">请输入您的真实姓名</string>
    <string name="telephone_hint">请输入您的联系方式</string>
    <string name="email_hint">请输入您的常用邮箱</string>
    <string name="click_hint">点击选择</string>
    <string name="user_profile">个人资料</string>
    <string-array name="intro_words">
        <item>校园活动，一网打尽</item>
        <item>爱你所爱</item>
        <item>透过公共组织找到共同兴趣</item>
    </string-array>
    <string name="attend_activity_num">参加的活动(%d)</string>
    <string name="no_attend_activity">还未参加活动噢~</string>
    <string name="no_follow_organization">还没有关注的组织噢~</string>
    <string name="no_like_activity">还没有喜欢的活动噢~</string>
    <string name="choose_school">选择学校</string>
    <string name="search">搜索</string>
    <string name="view_more_activities">点击查看更多活动 ></string>
    <string name="horizontal_dot">•</string>
    <string name="follow">关注</string>
    <string name="be_followed">被关注</string>
    <string name="follower">粉丝</string>
    <string name="homepage_like_org">喜欢的公共组织(%d)</string>
    <string name="homepage_like_activity">喜欢的活动(%d)</string>
    <string name="num_people_like">%d人喜欢过</string>
    <string name="followed">已关注</string>
    <string name="follow_earch_other">相互关注</string>
    <string name="net_work_err">网络貌似有问题</string>
    <string name="msg_school_not_selected">学校未选择</string>
    <string name="msg_error_email_format">邮箱格式错误</string>
    <string name="msg_error_phone_format">电话格式错误</string>
    <string name="msg_please_input_nickname">请输入昵称</string>
    <string name="msg_please_input_gender">请输入性别</string>
    <string name="msg_please_input_email">请输入邮箱</string>
    <string name="msg_please_input_phone">请输入电话</string>
    <string name="msg_please_input_name">请输入姓名</string>
    <string name="msg_please_input_words">请输入你的个性签名</string>
    <string name="gender_male">男</string>
    <string name="msg_please_input_pwd">请输入密码</string>
    <string name="choose_gender">选择性别</string>
    <string name="gender_female">女</string>
    <string name="gender_secret">保密</string>
    <string name="please_wait">请稍候</string>
    <string name="register_success">恭喜你，注册成功了。</string>
    <string name="login_error">登录失败</string>
    <string name="text_take_photo">相机</string>
    <string name="text_pick_photo">相册</string>
    <string name="text_set_avatar">设置头像</string>
    <string name="text_no_sdcard">未发现SD卡</string>
    <string name="text_ensure">确定</string>
    <string name="text_cancel">取消</string>
    <string name="text_no_camera">未发现相机应用</string>
    <string name="upload_success">头像上传成功</string>
    <string name="upload_fail">上传失败</string>
    <string name="register_fail">注册失败</string>
    <string name="register_email_repeat">该邮箱已注册</string>
    <string name="register_nickname_repeat">昵称重复</string>
    <string name="admin">管理员</string>
    <string name="org_intro">组织介绍</string>
    <string name="contact_with_mail">邮件联系</string>
    <string name="posted_activities">发布的活动</string>
    <string name="brief_introduction">简单介绍</string>
    <string name="msg_please_input_info">请输入信息</string>
    <string name="network_problem">网络不给力</string>
    <string name="invite_wx_friends">邀请微信好友</string>
    <string name="serach_friends">搜索好友</string>
    <string name="monday">周一</string>
    <string name="tuesday">周二</string>
    <string name="wednesday">周三</string>
    <string name="thursday">周四</string>
    <string name="friday">周五</string>
    <string name="saturday">周六</string>
    <string name="sunday">周日</string>
    <string name="today">今天</string>
    <string name="tomorrow">明天</string>
    <string name="yesterday">后天</string>
    <string name="share_to">分享到</string>
    <string name="quit">不参加了</string>
    <string name="share_sms">短信</string>
    <string name="share_mail">邮件</string>
    <string name="share_wx_moment">朋友圈</string>
    <string name="share_wx">微信好友</string>
    <string name="send_email">发送邮件</string>
    <string name="back">后退</string>
    <string name="forward">前进</string>
    <string name="refresh_or_stop">刷新/停止</string>
    <string name="more">更多</string>
    <string name="copy_link">复制链接</string>
    <string name="open_in_browser">在浏览器中打开</string>
    <string name="url_is_copied">链接已添加到剪贴板</string>
    <string name="default_category_color">#616161</string>
    <string name="setting_login">点击登录</string>
    <string name="setting_change_pwd">修改密码</string>
    <string name="setting_clear_cache">清除缓存</string>
    <string name="setting_share_us">分享WeCampus</string>
    <string name="setting_feed_back">意见反馈</string>
    <string name="setting_about_us">关于我们</string>
    <string name="old_password">原密码</string>
    <string name="new_password">新密码</string>
    <string name="submit">提交</string>
    <string name="input_old_pwd">请输入旧密码</string>
    <string name="input_new_pwd">请输入新密码</string>
    <string name="about_name">WeCampus 版权所有</string>
    <string name="about_version">1.0.0</string>
    <string name="about_like_us">喜欢我们? 给个好评把!</string>
    <string name="about_weibo">去微博看看我们在干嘛</string>
    <string name="about_web">踩踩我们的网站</string>
    <string name="no_market">对不起,你的手机上暂时还没有应用商店哦!</string>
    <string name="search_tab_activity">校园活动</string>
    <string name="serach_tab_user">用户</string>
    <string name="search_tab_org">公共组织</string>
    <string name="org_no_email">该组织暂时还没有设置邮箱</string>
    <string name="login_email">登录邮箱</string>
    <string name="forget_pwd_title">忘记密码</string>
    <string name="only_one_activity">你暂时只参加了一个活动哦~</string>
    <string name="get_join_activity_error">获取活动失败</string>
    <string name="save_success">保存成功</string>
    <string name="love_sercert">保密</string>
    <string name="love_single">单身</string>
    <string name="love_first">初恋还在</string>
    <string name="love_fuck">暧昧中</string>
    <string name="love_going">热恋中</string>
    <string name="love_break">刚分手</string>
    <string name="small_sister">可爱学妹</string>
    <string name="small_brother">正太学弟</string>
    <string name="big_brother">阳光学长</string>
    <string name="big_sister">成熟学姐</string>
    <string name="update_profile">更新资料</string>
    <string name="follow_success">关注成功</string>
    <string name="unfollow_success">取消关注</string>
    <string name="user_list_title_participates">参加的人</string>
    <string name="user_list_title_fans">粉丝</string>
    <string name="user_list_title_followers">关注</string>
    <string name="msg_no_map_app">无法打开地图应用</string>
    <string name="change_success">修改成功，请重新登录</string>
    <string name="change_fail">修改失败</string>
    <string name="msg__pwd_format_err">密码应至少为6位</string>
    <string name="get_info_error">获取新鲜事失败</string>
    <string name="follow_user_success">成功关注一枚小伙伴~</string>
    <string name="unfollow_user_success">取消关注</string>
    <string name="no_email_client">你还没有安装邮件客户端噢~</string>
    <string name="ensure_logout">确定要登出吗？</string>
    <string name="words_input_hint">添加个性签名，让别人更懂你</string>
    <string name="msg_leave_profile">离开资料编辑吗？</string>
    <string name="give_up">离开</string>
    <string name="go_on_modify">继续编辑</string>
    <string name="come_soon">即将加入&#8230;</string>
    <string name="wait_a_moment">亲，再等等哦~</string>
    <string name="num_like_no_org">喜欢的公共组织(0)</string>
    <string name="num_like_no_activity">喜欢的活动(0)</string>
    <string name="find_organizations">快去看看都有哪些热门组织~</string>
    <string name="find_activities">快点让小伙伴们了解你都喜欢什么活动吧~</string>
    <string name="save_profile">保存</string>
    <string name="msg_img_save_fail">保存失败</string>
    <string name="msg_img_save_success">已保存</string>
    <string name="copy_right_msg">Copyright ©2012–2013 Wecampus. All Rights Reserved</string>
    <string name="fragment_title_activities">全部活动</string>
    <string name="fragment_title_homepage">个人主页</string>
    <string name="share_weibo">新浪微博</string>
    <string name="age">年龄</string>
    <string name="age_num">%d岁</string>
    <string name="birthday_date">出生日期</string>
    <string name="input_validate_age">请输入有效的年龄</string>
    <string name="no_fans">还没有粉丝噢~</string>
    <string name="no_followings">还没有关注的人噢~</string>
</resources>