<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bg_color"
            android:id="@+id/content_frame">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp"
            android:background="@android:color/white">

            <!-- Name -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/square_section_height">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/nickname"
                    android:gravity="center"
                    android:layout_weight="1"
                    style="@style/RegisterTextView"/>

                <EditText
                    android:id="@+id/nickname"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:background="#00000000"
                    android:hint="@string/nickname_hint"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1.3dp"
                android:layout_marginLeft="11dp"
                android:layout_marginRight="11dp"
                android:background="@color/divider_bg" />

            <!-- Gender -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/square_section_height">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:text="@string/gender"
                    style="@style/RegisterTextView"/>

                <EditText
                    android:id="@+id/gender"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:background="#00000000"
                    android:hint="@string/gender_hint"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1.3dp"
                android:layout_marginLeft="11dp"
                android:layout_marginRight="11dp"
                android:background="@color/divider_bg" />

            <!-- School -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/square_section_height">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:text="@string/school"
                    style="@style/RegisterTextView"/>

                <EditText
                    android:id="@+id/school"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:background="#00000000"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1.3dp"
                android:layout_marginLeft="11dp"
                android:layout_marginRight="11dp"
                android:background="@color/divider_bg" />

            <!-- Words -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/square_section_height">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:text="@string/words"
                    style="@style/RegisterTextView"/>

                <EditText
                    android:id="@+id/words"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:background="#00000000"
                    android:hint="@string/words_hint"/>

            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp"
            android:background="@android:color/white">

            <!-- Real Name -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/square_section_height">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:text="@string/real_name"
                    style="@style/RegisterTextView"/>

                <EditText
                    android:id="@+id/real_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:background="#00000000"
                    android:hint="@string/real_name_hint"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1.3dp"
                android:layout_marginLeft="11dp"
                android:layout_marginRight="11dp"
                android:background="@color/divider_bg" />

            <!-- Telephone -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/square_section_height">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:text="@string/telephone"
                    style="@style/RegisterTextView"/>

                <EditText
                    android:id="@+id/telephone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:background="#00000000"
                    android:hint="@string/telephone_hint"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1.3dp"
                android:layout_marginLeft="11dp"
                android:layout_marginRight="11dp"
                android:background="@color/divider_bg" />

            <!-- Email -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/square_section_height">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:text="@string/email"
                    style="@style/RegisterTextView"/>

                <EditText
                    android:id="@+id/email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:background="#00000000"
                    android:hint="@string/email_hint"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1.3dp"
                android:layout_marginLeft="11dp"
                android:layout_marginRight="11dp"
                android:background="@color/divider_bg" />

            <!-- Relationship -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/square_section_height">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:text="@string/relationship"
                    style="@style/RegisterTextView"/>

                <EditText
                    android:id="@+id/relationship"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:background="#00000000"
                    android:hint="@string/click_hint"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1.3dp"
                android:layout_marginLeft="11dp"
                android:layout_marginRight="11dp"
                android:background="@color/divider_bg" />

            <!-- College -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/square_section_height">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:text="@string/college"
                    style="@style/RegisterTextView"/>

                <EditText
                    android:id="@+id/college"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:background="#00000000"
                    android:hint="@string/click_hint"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1.3dp"
                android:layout_marginLeft="11dp"
                android:layout_marginRight="11dp"
                android:background="@color/divider_bg" />

            <!-- Role -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/square_section_height">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:text="@string/role"
                    style="@style/RegisterTextView"/>

                <EditText
                    android:id="@+id/role"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:background="#00000000"
                    android:hint="@string/click_hint"/>
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:text="@string/my_profile_tip" />

    </LinearLayout>

</ScrollView>