<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="4dp"
    android:paddingRight="4dp"
    android:paddingTop="15dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/login_email"
                android:layout_weight="1"
                android:gravity="center"
                style="@style/LoginTextView"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:id="@id/forget_email"
                android:layout_weight="3"
                android:hint="@string/input_tips"
                android:textSize="15sp"
                android:background="#00000000" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/submit"
        android:id="@id/forget_submit"
        android:textSize="18sp"
        android:textColor="@color/text_color_white"
        android:background="@drawable/btn_selectable_background_we" />

</LinearLayout>